--- a/style.css
+++ b/style.css
@@ -6,15 +6,15 @@
 
 body {
     font-family: 'Open Sans', sans-serif; 
-    margin: 0px;
+    
 } 
 
 textarea {
     height:  10vh;
     
     width: 400px;
-    display: block;
-    margin: auto;
+    
+    margin: 0rem 0rem;
     padding: 2% 2%;
 }
 
@@ -23,21 +23,19 @@ textarea {
     padding: 1% 1%;
     text-align: center;
     border-bottom-left-radius: 1rem;
-    margin:1% 1%;
+    
     display: block;
     width : 100%;
 }
 
-.section {
-    display: block;
-    text-align: center;
-}
+
 
 main {
-    width:400px;
+    width:450px;
     /* text-align: center; */
-    margin: auto;
-    
+    margin:auto;
+    padding: 1rem 0rem;
+    display: block;
     
 }
 
